# a11g-final-submission-s26-s26-t20-ambientrx

./: Lid.stl  Part Studio 1.stl  README.md
codebase1_custom_pcb/: .projectchecksums  .projectlinkstore  readme.md  vscode.conf  wifi_http_otaf_soc_2.pintool  wifi_http_otaf_soc_2.slcp  wifi_http_otaf_soc_2.slpb  wifi_http_otaf_soc_2.slps
codebase1_custom_pcb/.uceditor/: .wifi_http_otaf_soc_2.%extension-wiseconnect3_sdk%sl_si91x_led_917led0.cedit
codebase1_custom_pcb/autogen/.slc_state/: .crc_config.crc
codebase1_custom_pcb/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
codebase1_custom_pcb/cmake_gcc/: CMakeLists.txt  CMakePresets.json  wifi_http_otaf_soc_2.cmake  wifi_http_otaf_soc_2_project.cmake
codebase2_dev_board_arducam/: .projectchecksums  .projectlinkstore  vscode.conf  wifi_http_otaf_camera.pintool  wifi_http_otaf_camera.slcp  wifi_http_otaf_camera.slpb  wifi_http_otaf_camera.slps
codebase2_dev_board_arducam/autogen/.slc_state/: .crc_config.crc
codebase2_dev_board_arducam/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
codebase2_dev_board_arducam/cmake_gcc/: CMakeLists.txt  CMakePresets.json  wifi_http_otaf_camera.cmake  wifi_http_otaf_camera_project.cmake
