# Define minimal required version of CMake.
cmake_minimum_required(VERSION "3.25")

# Project definition
project(
	wifi_http_otaf_camera
	VERSION 1.0
	LANGUAGES C CXX ASM
)

# Include the definition of the slc_wifi_http_otaf_camera target,
# which contains the content of the SLC project
include(wifi_http_otaf_camera.cmake)

add_executable(wifi_http_otaf_camera
    # Add additional sources here
)

target_include_directories(wifi_http_otaf_camera PUBLIC
    # Add additional include paths here
)

target_compile_definitions(wifi_http_otaf_camera PUBLIC
    # Add additional macros here
)

target_compile_options(wifi_http_otaf_camera PUBLIC
    # Set additional compiler flags here
)

target_link_options(wifi_http_otaf_camera PUBLIC
    # Set additional linker flags here
)

# Link with the content defined in the SLC project
target_link_libraries(wifi_http_otaf_camera PRIVATE
    slc
)

# Include managed project content if available
include(wifi_http_otaf_camera_project.cmake OPTIONAL RESULT_VARIABLE managed_project)
if(managed_project)
    message(STATUS "Using managed project content from ${managed_project}")
endif()

# Force the gcc linker command
set_target_properties(wifi_http_otaf_camera PROPERTIES LINKER_LANGUAGE C)

# Create .bin, .hex and .s37 artifacts after building the project
add_custom_command(TARGET wifi_http_otaf_camera
    POST_BUILD
    COMMAND ${CMAKE_OBJCOPY} ${OBJCOPY_SREC_CMD} "$<TARGET_FILE:wifi_http_otaf_camera>" "$<TARGET_FILE_DIR:wifi_http_otaf_camera>/$<TARGET_FILE_BASE_NAME:wifi_http_otaf_camera>.s37"
    COMMAND ${CMAKE_OBJCOPY} ${OBJCOPY_IHEX_CMD} "$<TARGET_FILE:wifi_http_otaf_camera>" "$<TARGET_FILE_DIR:wifi_http_otaf_camera>/$<TARGET_FILE_BASE_NAME:wifi_http_otaf_camera>.hex"
    COMMAND ${CMAKE_OBJCOPY} ${OBJCOPY_BIN_CMD}  "$<TARGET_FILE:wifi_http_otaf_camera>" "$<TARGET_FILE_DIR:wifi_http_otaf_camera>/$<TARGET_FILE_BASE_NAME:wifi_http_otaf_camera>.bin" 
)

# Run post-build pipeline to perform additional post-processing
if(post_build_command)
add_custom_command(TARGET wifi_http_otaf_camera
    POST_BUILD
    WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/..
    COMMAND ${post_build_command}
)
endif()